# HiPython

./: .gitignore  build_split_pdf.spec  main_split_pdf.py  pyproject.toml
data/split_pdf/: testPdf100.xlsx
src/cp_srt_to_mp4_dir/: __main__.py
src/hi_tkinter/: __init__.py  __main__.py
src/split_pdf/: __init__.py  __main__.py  core.py  gui.py
