[project]
name = "hipython"
version = "0.1.0"
description = ""
authors = [
    {name = "runylin",email = "runylin@gmail.com"}
]
license = {text = "GPL"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas (>=2.3.1,<3.0.0)",
    "pypdf2 (>=3.0.1,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
